# smart-document-analyser

./: .env.example  .gitignore  README.md  env.example  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
src/app/: main.py
src/app/routers/: analysis.py  jobs.py  upload.py  vector_store.py
src/app/services/: file_service.py  llava_service.py  model_manager.py  processing_pipeline.py  progress_service.py  text_analysis_service.py  vector_store_service.py
src/smart_document_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/services/: test_file_service.py  test_performance_optimizations.py  test_phase2_optimizations.py  test_text_analysis_service.py
